testdata/parser/negative/18.pdl
#version 100

// illegal subject
primitive main(in a, out b) {
	int x = 0;
	int[] y = {x, x, x};
	y[0] = (x+y)[0];
}